ios permissions, get gps location, print on photo

--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Model
 @using ConstructionSiteLibrary.Interfaces
 @inject ICameraService CameraService;
+@inject ILocationService LocationService;
 
 @page "/"
 <ScreenComponent OnScreenSizeChanged="@ScreenSizeChanged" OnScreenDimensionChanged="@ScreenDimensionChanged" />
