aggiunta gestione eccezione in caso di assenza connessione

--- a/ConstructionSiteLibrary/Layout/MainLayout.razor
+++ b/ConstructionSiteLibrary/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@using ConstructionSiteLibrary.Model
+@using ConstructionSiteLibrary.Services
 @using Microsoft.JSInterop
 @inherits LayoutComponentBase
 
