gestione online/offline per la compilazione dei documenti

--- a/ConstructionSiteLibrary/Components/FormCompilation/FormCompilation.razor
+++ b/ConstructionSiteLibrary/Components/FormCompilation/FormCompilation.razor
@@ -83,7 +83,8 @@ else
         </div>
 
         <RadzenButton Icon="add" Text="Salva questionario" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
-                      Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>SaveForm())" />
+                      Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>SaveForm())"
+                      IsBusy="@onSaving" BusyText="Salva questionario" />
     </div>
 }
 
