--- a/ConstructionSiteLibrary/_Imports.razor
+++ b/ConstructionSiteLibrary/_Imports.razor
@@ -4,3 +4,4 @@
 @* Componenti di utilità *@
 @using ConstructionSiteLibrary.Components.Utilities
 @using ConstructionSiteLibrary.Services
+@using ConstructionSiteLibrary.Repositories
