--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -12,26 +12,8 @@
     Qui puoi creare, personalizzare e compilare i documenti in base alle tue necessità e a quelle del cliente.
 </p>
 
-@*<RadzenCard class="p-0">
-    <RadzenStack Orientation="@orientation" Gap="@gap" JustifyContent="@justifyContent" AlignItems="@alignItems"
-        Wrap="@wrap" Style="margin-top: 20px, margin-bottom: 20px;">
-        <RadzenCard class="p-1 rz-background-color-info rz-color-on-info rz-text-align-center">
-            <RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage />
-        </RadzenCard>
-        @if (!string.IsNullOrEmpty(PhotoPath))
-        {
-            <RadzenCard class="p-1 rz-background-color-success rz-color-on-success rz-text-align-center"
-                style="height: 508px;">
-                <img src="@PhotoPath" height="500"/>
-            </RadzenCard>
-        }
-    </RadzenStack>
-</RadzenCard>*@
+<OnlineSyncComponent />
 
 @code {
-    Orientation orientation = Orientation.Vertical;
-    AlignItems alignItems = AlignItems.Center;
-    JustifyContent justifyContent = JustifyContent.Center;
-    FlexWrap wrap = FlexWrap.NoWrap;
-    string gap = "10px";
+
 }
