--- a/ConstructionSiteLibrary/Components/Utilities/OnlineSyncComponent.razor
+++ b/ConstructionSiteLibrary/Components/Utilities/OnlineSyncComponent.razor
@@ -9,10 +9,18 @@
 {
     <div>
         <RadzenStack Orientation="Orientation.Vertical">
-@*             <RadzenText TextStyle="TextStyle.Body1">
-                Sincronizzazione documenti con il server: verranno scaricati i documenti e caricati online le ultime modifiche apportate
-            </RadzenText> *@
+            @*             <RadzenText TextStyle="TextStyle.Body1">
+        Sincronizzazione documenti con il server: verranno scaricati i documenti e caricati online le ultime modifiche apportate
+        </RadzenText> *@
             <RadzenButton Icon="sync" Text="Sincronizza" Click="Syncronize" BusyText="Sincronizza" IsBusy="onSyncronize" Style="width:200px;height:40px;" />
+
+            <RadzenButton Icon="" Text="Disco Occupato" Click="DiskSpace" Style="width:200px;height:40px;margin-top:2rem;" />
+            @if(diskSpace is not null)
+            {
+                <RadzenText TextStyle="TextStyle.Body1">
+                    @diskSpace
+                </RadzenText>
+            }
         </RadzenStack>
     </div>
 }
@@ -23,6 +31,7 @@
 
     private bool dbSupport = false;
     private bool onSyncronize = false;
+    private string? diskSpace;
 
     protected override async Task OnInitializedAsync()
     {
@@ -38,6 +47,11 @@
         var uploadResult = await DocumentRepository.UploadDocuments();
         var downloadResult = await DocumentRepository.DownloadDocuments();
         onSyncronize = false;
+    }
+
+    private async Task DiskSpace()
+    {
+       diskSpace = await dbService.DiskSpaceOccupied();
     }
 
     /// <summary>
