--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -71,6 +71,15 @@
                 }
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link navItem-size" href="constructor_sites">
+                <span class="bi bi-building-fill @biClassRules" aria-hidden="true"></span>
+                @if (!@IconMenuActive)
+                {
+                    <label>Cantieri</label>
+                }
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link navItem-size" href="test">
                 <span class="bi bi-database @biClassRules" aria-hidden="true"></span>
@@ -80,6 +89,8 @@
                 }
             </NavLink>
         </div>
+
+
     </nav>
 </div>
 
