--- a/ConstructionSiteLibrary/Components/Choices/TableChoiceMobile.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoiceMobile.razor
@@ -1,6 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Managers
 @using ConstructionSiteLibrary.Repositories
 @using Shared
+@using Shared.Templates
 
 @inject DialogService DialogService
 @inject NotificationManager NotificationManager
