--- a/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/TableConstructorSite.razor
@@ -1,5 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Repositories
 @using Shared;
+@using Shared.Documents;
 
 @inject DialogService DialogService
 @inject ConstructorSitesRepository ConstructorSitesRepository
