--- a/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
@@ -1,6 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Managers
 @using ConstructionSiteLibrary.Repositories
-@using Shared
+@using Shared;
+@using Shared.Templates
 
 
 @inject DialogService DialogService
@@ -20,15 +21,15 @@ else
         <RadzenFieldset Text="Possibili Scelte" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                           Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-            <RadzenDataGrid @ref="grid" TItem="ChoiceModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@list"
+            <RadzenDataGrid @ref="grid" TItem="TemplateChoiceModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@list"
                             AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
                     @*<RadzenDataGridColumn TItem="ChoiceModel" Property="Id" Title="Id" Width="40px" />*@
-                    <RadzenDataGridColumn TItem="ChoiceModel" Property="Tag" Title="Nome" Width="100px" />
-                    <RadzenDataGridColumn TItem="ChoiceModel" Property="Value" Title="Scelta" />
-                    <RadzenDataGridColumn TItem="ChoiceModel" Title="Azioni" Width="60px" Sortable="false">
+                    <RadzenDataGridColumn TItem="TemplateChoiceModel" Property="Tag" Title="Nome" Width="100px" />
+                    <RadzenDataGridColumn TItem="TemplateChoiceModel" Property="Value" Title="Scelta" />
+                    <RadzenDataGridColumn TItem="TemplateChoiceModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
                             <RadzenRow JustifyContent="JustifyContent.SpaceAround">
                                 @* Mostro i bottoni solo se ho i permessi di modifica *@
