--- a/ConstructionSiteLibrary/Components/Clients/TableClient.razor
+++ b/ConstructionSiteLibrary/Components/Clients/TableClient.razor
@@ -1,5 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Repositories
 @using Shared;
+@using Shared.Documents;
 
 @inject ClientsRepository ClientsRepository
 @inject DialogService DialogService
@@ -28,7 +29,7 @@ else
                 <Columns>
                     @*<RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />*@
                     <RadzenDataGridColumn TItem="ClientModel" Property="Name" Title="Nome" Width="40px" />
-                    <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
+                    <RadzenDataGridColumn TItem="ClientModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
                             <RadzenRow JustifyContent="JustifyContent.SpaceAround">
                                 @* Mostro i bottoni solo se ho i permessi di modifica *@
