--- a/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
@@ -1,6 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Repositories
-@using Shared;
-@using Shared.Templates;
+@using Shared
+@using Shared.Templates
 
 @inject CategoriesRepository CategoriesRepository
 @inject DialogService DialogService
