--- a/ConstructionSiteLibrary/Pages/DocumentCompilationPage.razor
+++ b/ConstructionSiteLibrary/Pages/DocumentCompilationPage.razor
@@ -1,4 +1,4 @@
-﻿@using ConstructionSiteLibrary.Components.DocumentCompilation;
+﻿@using ConstructionSiteLibrary.Components.Documents;
 
 @page "/form_compilation"
 
