--- a/ConstructionSiteLibrary/Pages/TemplateCreationPage.razor
+++ b/ConstructionSiteLibrary/Pages/TemplateCreationPage.razor
@@ -1,4 +1,4 @@
-﻿@using ConstructionSiteLibrary.Components.TemplateCreation;
+﻿@using ConstructionSiteLibrary.Components.Templates;
 
 @page "/form_creation"
 
