--- a/ConstructionSiteLibrary/Pages/QuestionPage.razor
+++ b/ConstructionSiteLibrary/Pages/QuestionPage.razor
@@ -1,7 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Components.Questions;
 @using ConstructionSiteLibrary.Model
 
-@page "/questions"
+@attribute [Route(GlobalVariables.QuestionPage)]
 
 <h3>Domande</h3>
 
