--- a/ConstructionSiteLibrary/_Imports.razor
+++ b/ConstructionSiteLibrary/_Imports.razor
@@ -5,3 +5,4 @@
 @using ConstructionSiteLibrary.Components.Utilities
 @using ConstructionSiteLibrary.Services
 @using ConstructionSiteLibrary.Repositories
+@using ConstructionSiteLibrary.Utility
