modifiche alla form cantieri

--- a/ConstructionSiteLibrary/Components/ConstructorSites/FormConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/FormConstructorSite.razor
@@ -21,7 +21,7 @@ else
                 </RadzenFormField>
                 <RadzenFormField Text="Descrizione" Variant="@GlobalVariables.ComponentVariant">
                     <ChildContent>
-                        <RadzenTextArea Name="Nome" @bind-Value="@form.Name" Rows="3" />
+                        <RadzenTextArea Name="Nome" @bind-Value="@form.JobDescription" Rows="3" />
                     </ChildContent>
                 </RadzenFormField>
                 <RadzenFormField Text="Indirizzo <span style='color:red'> (obbligatorio)</span>" Variant="@GlobalVariables.ComponentVariant">
