--- a/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor
+++ b/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor
@@ -1,9 +1,10 @@
-﻿@using ConstructionSiteLibrary.Model;
-@using ConstructionSiteLibrary.Utility;
+﻿@using ConstructionSiteLibrary.Model
+@using ConstructionSiteLibrary.Utility
 
 @inject DocumentsRepository DocumentsRepository
 @inject ConstructorSitesRepository ConstructorSitesRepository
 @inject DialogService DialogService
+@inject NavigationService NavigationService
 
 
 <ScreenComponent @ref="screenComponent" OnScreenDimensionChanged="@OnScreenDimensionChanged"
@@ -15,17 +16,19 @@
 }
 else
 {
+    <div class="hstack siteTitle">
+        <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH4" Text="@site.Name" />
+        <div>
+            <RadzenIcon Icon="settings" IconStyle="IconStyle.Primary" class="settingIcon" onclick="@(()=>OnSettingsClick())" />
+        </div>
+    </div>
+    <div class="row" style="justify-content:space-between">
+        <RadzenButton Icon="arrow_back" Text="Indietro" Click="@Back" class="buttonBack" />
+        <RadzenButton class="buttonNewDocument" Icon="add" Text="Crea nuovo" Click="@OpenForm" />
+    </div>
     <div class="mx-2 my-5">
         <div class="my-5">
-            <div class="hstack">
-                <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH4" Text="@site.Name" />
-                <div>
-                    <RadzenIcon Icon="settings" IconStyle="IconStyle.Primary" class="settingIcon" onclick="@(()=>OnSettingsClick())" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 EmptyColumn">
-                </div>
+            <div class="row" style="justify-content:center">
                 <div class="divSearchBar">
                     <RadzenFormField Text="Ricerca documento" Variant="@GlobalVariables.ComponentVariant" class="searchBar">
                         <Start>
@@ -35,9 +38,6 @@ else
                             <RadzenTextBox ValueChanged="@(args => SearchChanged(args))" />
                         </ChildContent>
                     </RadzenFormField>
-                </div>
-                <div class="col-4 buttonContainer">
-                    <RadzenButton class="buttonNewDocument" Icon="add" Text="Crea nuovo" Click="@OpenForm" />
                 </div>
             </div>
         </div>
