--- a/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor.css
+++ b/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor.css
@@ -1,5 +1,8 @@
 ﻿
-
+.siteTitle{
+    justify-content:center;
+    margin-bottom:2rem;
+}
 .searchBar, ::deep .searchBar {
     width: 80% !important;
 }
@@ -26,10 +29,18 @@
 
 .divSearchBar {
     flex: 0 0 auto;
-    width: 33.33333333%;
+    width: 450px;
     justify-content: center;
     display: flex !important;
     flex-wrap: wrap;
+}
+
+.buttonBack, ::deep .buttonBack {
+    width: 10%;
+    min-width: 140px;
+    height: 50px;
+    border-radius: 1.2rem !important;
+    margin-left: 1rem;
 }
 
 .buttonContainer {
@@ -38,7 +49,9 @@
 }
 
 .buttonNewDocument, ::deep .buttonNewDocument {
-    width: 50%;
+    /*width: 50%;*/
+    width: 180px;
+    min-width: 180px;
     height: 50px;
     border-radius: 1.2rem !important;
     margin-right: 1rem;
@@ -64,10 +77,10 @@
 
     .divSearchBar {
         flex: 0 0 auto;
-        width: 66.66666667%;
+        /*width: 66.66666667%;*/
         display: flex !important;
         flex-wrap: wrap;
-        justify-content: end;
+        /*justify-content: start;*/
     }
 
     .searchBar, ::deep .searchBar {
@@ -75,7 +88,8 @@
     }
 
     .buttonNewDocument, ::deep .buttonNewDocument {
-        width: 80%;
+        /*width: 80%;*/
+        width: 180px;
         height: 50px;
         border-radius: 1.2rem !important;
         margin-right: 1rem;
