--- a/ConstructionSiteLibrary/Pages/ConstructorSitePage.razor
+++ b/ConstructionSiteLibrary/Pages/ConstructorSitePage.razor
@@ -1,7 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Components.Documents
 @inject ConstructorSitesRepository SiteRepository
 
-@attribute [Route(PageRouting.SitePage + "{SiteId:int}")]
+@attribute [Route(PageRouting.ConstructorSitePage + "{SiteId:int}")]
 
 
 
