--- a/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor
+++ b/ConstructionSiteLibrary/Components/Documents/TableDocuments.razor
@@ -24,7 +24,7 @@ else
     </div>
     <div class="row" style="justify-content:space-between">
         <RadzenButton Icon="arrow_back" Text="Indietro" Click="@Back" class="buttonBack" />
-        <RadzenButton class="buttonNewDocument" Icon="add" Text="Crea nuovo" Click="@OpenForm" />
+        <RadzenButton class="buttonNewDocument" Icon="add" Text="Crea nuovo" Click="@CreaNuovo" />
     </div>
     <div class="mx-2 my-5">
         <div class="my-5">
