--- a/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
@@ -1,5 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Repositories
 
+
 @inject TemplatesRepository TemplatesRepository
 
 <ScreenComponent @ref="screenComponent" />
@@ -13,6 +14,15 @@ else
         <Steps>
             <RadzenStepsItem>
                 <TemplateSelectionStep />
+            </RadzenStepsItem>
+            <RadzenStepsItem>
+
+            </RadzenStepsItem>
+            <RadzenStepsItem>
+
+            </RadzenStepsItem>
+            <RadzenStepsItem>
+
             </RadzenStepsItem>
         </Steps>
     </RadzenSteps>
