--- a/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
@@ -16,7 +16,7 @@ else
                 <TemplateSelectionStep />
             </RadzenStepsItem>
             <RadzenStepsItem>
-
+                <TemplateDescriptionSelectionStep />
             </RadzenStepsItem>
             <RadzenStepsItem>
 
