template questions selection and template name

--- a/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
@@ -19,10 +19,10 @@ else
                 <TemplateDescriptionSelectionStep />
             </RadzenStepsItem>
             <RadzenStepsItem>
-
+                <TemplateQuestionsSelectionStep />
             </RadzenStepsItem>
             <RadzenStepsItem>
-
+                <TemplateNameStep />
             </RadzenStepsItem>
         </Steps>
     </RadzenSteps>
