creato terzo step per le companies

--- a/ConstructionSiteLibrary/Components/Documents/Wizard/WizardDocumentCreation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Wizard/WizardDocumentCreation.razor
@@ -12,7 +12,7 @@
                 <DescriptionStep SelectedTemplate="@_selectedTemplate" Document="@_document" OnBack="@Back" OnForward="@(args=>Forward(args))"/>
             </RadzenStepsItem>
             <RadzenStepsItem Text="Step3">
-                <p>Step3</p>
+                <CompaniesStep SelectedCompanies="@_document.Companies" OnBack="@Back" OnForward="@(args=>Forward(args))" />
             </RadzenStepsItem>
             <RadzenStepsItem Text="Step4">
                 <p>Step4</p>
