--- a/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/WizardTemplateCreation.razor
@@ -1,4 +1,5 @@
-﻿@using ConstructionSiteLibrary.Repositories
+﻿@using ConstructionSiteLibrary.Model.TemplateWizard
+@using ConstructionSiteLibrary.Repositories
 
 
 @inject TemplatesRepository TemplatesRepository
@@ -13,13 +14,13 @@ else
     <RadzenSteps @ref="_stepsComponent" ShowStepsButtons="false">
         <Steps>
             <RadzenStepsItem>
-                <TemplateSelectionStep />
+                <TemplateSelectionStep OnForward="@(args=>Forward(args))" />
             </RadzenStepsItem>
             <RadzenStepsItem>
-                <TemplateDescriptionSelectionStep OnBack="@Back" />
+                <TemplateDescriptionSelectionStep  CurrentTemplate="@_template" OnBack="@Back" OnForward="@(args=>Forward(args))" />
             </RadzenStepsItem>
             <RadzenStepsItem>
-                <TemplateQuestionsSelectionStep OnBack="@Back"/>
+                <TemplateQuestionsSelectionStep OnBack="@Back" OnForward="@(args=>Forward(args))" />
             </RadzenStepsItem>
             <RadzenStepsItem>
                 <TemplateNameStep OnBack="@Back" />
