--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
@@ -61,6 +61,7 @@ else
     public async Task SaveTemplate()
     {
         CurrentTemplate.NameTemplate = Title;
+        CurrentTemplate.TitleTemplate = Title;
 
         await TemplatesRepository.SaveTemplate(CurrentTemplate);
     }
