salvataggio nuovo documento

--- a/ConstructionSiteLibrary/Components/Documents/Wizard/WizardDocumentCreation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Wizard/WizardDocumentCreation.razor
@@ -1,6 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Model.DocumentWizard
 
-
+@inject ConstructorSitesRepository ConstructorSitesRepository
 
 <div>
     <RadzenSteps @ref="_stepsComponent" ShowStepsButtons="false">
