--- a/ConstructionSiteLibrary/Components/Documents/Wizard/SummaryStep.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Wizard/SummaryStep.razor
@@ -1,7 +1,9 @@
 ﻿@using Shared.Templates
 @using Shared.Documents
+@using ConstructionSiteLibrary.Components.Templates;
 
 @inject DocumentsRepository DocumentsRepository
+@inject NavigationService NavigationService
 
 <div>
     @if (onloading)
@@ -15,7 +17,7 @@
                 <RadzenText><strong>@Document.Title</strong> </RadzenText>
                 <RadzenText><strong>Descrizione: </strong> @Document.Description</RadzenText>
                 <RadzenText><strong>CSE: </strong> @Document.CSE</RadzenText>
-                <RadzenText>Aziende prenseti:</RadzenText>
+                <RadzenText>Aziende presenti:</RadzenText>
                 @foreach (var company in Document.Companies)
                 {
                     <RadzenText>@company.CompanyName</RadzenText>
@@ -61,6 +63,9 @@
         await DocumentsRepository.SaveDocument(Document);
 
         onSaving = false;
+
+        //NavigationService.ChangePage(PageRouting.ConstructorSitePage + Document.ConstructorSite.Id);
+
     }
 
     public void Back()
